--- a/CSS/D-Drum.scss
+++ b/CSS/D-Drum.scss
@@ -49,17 +49,21 @@ $fon14: 14px;
                 }
             }
         }
+        @media (max-width: 320px) {
+            display: none;
+        }
     }
     // 項目清單
     // 翻書效果
     .page {
-        width: 30vw;
-        height: 40vw;
+        width: 36vw;
+        height: 88vh;
         background-color: #111111;
         float: left;
         margin-bottom: 0.5em;
         background: left top no-repeat;
         background-size: cover;
+
         // 封面
         .img-set {
             background-position: center;
@@ -225,27 +229,45 @@ $fon14: 14px;
                 flex-wrap: wrap;
                 .art {
                     position: relative;
-                    width: 33.33% ;
-                    height: 100% ;
+                    width: 50%;
+                    height: 100%;
 
-                    .art-img01 {                        
+                    .art-img01 {
                         background-image: url("../img/樂團成員/成員去背/王昱淇-截圖.png");
                     }
-                    .art-img02{
-                        background-image: url('../img/樂團成員/成員去背/林孟緯拷貝.png');
+                    .art-img02 {
+                        background-image: url("../img/樂團成員/成員去背/林孟緯拷貝.png");
                     }
-                    .art-img03{
-                        background-image: url('../img/樂團成員/成員去背/李意瑩.png');
+                    .art-img03 {
+                        background-image: url("../img/樂團成員/成員去背/李意瑩.png");
                     }
-                    .art-img04{
-                        background-image: url('../img/樂團成員/成員去背/許瑋庭.png');
+                    .art-img04 {
+                        background-image: url("../img/樂團成員/成員去背/許瑋庭.png");
                     }
-                    .art-img05{}
-                    .art-img06{}
-
+                    .art-img05 {
+                        background-image: url("../img/樂團成員/成員去背/吳鴻村.png");
+                    }
+                    .art-img06 {
+                        background-image: url("../img/樂團成員/成員去背/江逸芹.png");
+                    }
+                    .art-img07 {
+                        background-image: url("../img/樂團成員/成員去背/林薏軒.png");
+                    }
+                    .art-img08 {
+                        background-image: url("../img/樂團成員/成員去背/張嘉方.png");
+                    }
+                    .art-img09 {
+                        background-image: url("../img/樂團成員/成員去背/徐霈純.png");
+                    }
+                    .art-img10 {
+                        background-image: url("../img/樂團成員/成員去背/黃士芬.png");
+                    }
+                    .art-img11 {
+                        background-image: url("../img/樂團成員/成員去背/黃志荃.png");
+                    }
                     .art-img {
-                        width: 250px;
-                        height: 250px;
+                        width: 300px;
+                        height: 300px;
                         background-position: center;
                         background-repeat: no-repeat;
                         background-size: contain;
@@ -257,12 +279,12 @@ $fon14: 14px;
                         left: 0;
                         right: 0;
                         background-color: #efefef;
-                        // border: 1px solid #e9c37c;
                         opacity: 0.8;
                         overflow: hidden;
                         width: 0;
                         height: 100%;
                         transition: 0.5s ease;
+
                         .art-name {
                             width: 100%;
                             height: 100%;
@@ -276,8 +298,9 @@ $fon14: 14px;
                             text-align: left;
                         }
                     }
-                    &:hover>.overlay-ToRight {
-                        width:100%;
+                    &:hover > .overlay-ToRight {
+                        width: 100%;
+                        border: 1px solid #e9c37c;
                     }
                 }
             }
@@ -302,13 +325,15 @@ $fon14: 14px;
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: center;
+                margin-top: 50px;
                 width: 100%;
                 height: 50%;
-                h3 {
+                .drama-title {
                     text-align: center;
                     width: 100%;
                     height: 50px;
                     line-height: 50px;
+                    font-size: $fon32;
 
                     margin-top: 20px;
                     margin-bottom: 30px;
@@ -317,9 +342,15 @@ $fon14: 14px;
                     width: 70%;
                     height: 30px;
                 }
+                .drama-sub-t {
+                    font-size: $fon30;
+                }
+                .drama-text {
+                    font-size: $fon24;
+                }
             }
             .drama-img {
-                height: 30%;
+                height: 40%;
                 position: absolute;
                 right: 0;
                 bottom: 0;
@@ -328,22 +359,27 @@ $fon14: 14px;
         // 第七頁
         // 第八頁 定目劇-2
         .video {
+            position: relative;
+            z-index: 2;
             background-color: #b15821;
             width: 100%;
             height: 100%;
             padding: 60px 50px;
+            .video-00 {
+                width: 50%;
+                display: flex;
+                justify-content: center;
+                align-content: center;
+                align-items: center;
+            }
             .video-01 {
                 width: 100%;
                 height: 30%;
                 background-color: #efe5cb;
-                border-radius: 20px;
+                border-radius: $fon20;
                 padding: 10px 0;
                 margin: 20px;
-                display: flex;
-                .dvd {
-                    width: 40%;
-                    height: 25%;
-                }
+
                 .dvd-text {
                     width: 50%;
                     h4 {
@@ -351,8 +387,27 @@ $fon14: 14px;
                     }
                     h5 {
                         width: 100%;
+                        letter-spacing: 2px;
                     }
                 }
+            }
+            .dvd {
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                width: 40%;
+                height: 100%;
+                margin: 5px;
+                border-radius: $fon20;
+            }
+            .dvd-img01 {
+                background-image: url("../img/鼓樂饗宴/天空斬照片.jpeg");
+            }
+            .dvd-img02 {
+                background-image: url("../img/鼓樂饗宴/風馳雷擊照片.jpg");
+            }
+            .dvd-img03 {
+                background-image: url("../img/鼓樂饗宴/祈天獻日照片.jpg");
             }
             .video-02 {
                 width: 100%;
@@ -363,10 +418,7 @@ $fon14: 14px;
                 margin: 0 20px;
                 display: flex;
                 flex-direction: row;
-                .dvd {
-                    width: 40%;
-                    height: 25%;
-                }
+
                 .dvd-text {
                     width: 50%;
                     display: flex;
@@ -395,10 +447,12 @@ $fon14: 14px;
             perspective: 250vw;
         }
     }
+    .pages {
+    }
 
     .book .pages {
-        width: 60vw;
-        height: 40vw;
+        width: 72vw;
+        height: 88vh;
         position: relative;
         transform-style: preserve-3d;
         // backface-visibility: hidden;
@@ -411,16 +465,16 @@ $fon14: 14px;
         margin: 0;
         position: absolute;
         top: 0;
-        width: 30vw;
-        height: 40vw;
+        width: 36vw;
+        height: 88vh;
         transform-origin: 0 0;
         transition: transform 1.4s;
         backface-visibility: hidden;
         transform-style: preserve-3d;
         cursor: pointer;
         user-select: auto;
-        
-        // background-color: #f0f0f0;
+
+        background-color: #f0f0f0;
     }
     .book .page:before {
         content: "";
@@ -429,7 +483,7 @@ $fon14: 14px;
         bottom: 0;
         left: 0;
         right: 0;
-        // background: rgba(0, 0, 0, 0);
+        background: rgba(0, 0, 0, 0);
         // transition: background 0.7s;
         // z-index: 2;
         z-index: 0;
@@ -444,13 +498,13 @@ $fon14: 14px;
     }
     // 翻起頁角效果(左邊
     .book .page:nth-child(odd):hover {
-        // transform: rotateY(-15deg);
+        // transform: rotateY(-10deg);
     }
     .book .page:nth-child(odd):hover:before {
-        // background: rgba(188, 104, 33, 0.03);
+        background: rgba(188, 104, 33, 0.03);
     }
     .book .page:nth-child(odd):before {
-        // background: rgba(188, 104, 33, 0);
+        background: rgba(188, 104, 33, 0);
     }
     .book .page:nth-child(even) {
         pointer-events: none;
@@ -462,7 +516,7 @@ $fon14: 14px;
         background-image: linear-gradient(to left, rgba(188, 104, 33, 0.12) 0%, rgba(188, 104, 33, 0) 10%);
     }
     .book .page:nth-child(even):before {
-        // background: rgba(188, 104, 33, 0.2);
+        background: rgba(188, 104, 33, 0.2);
     }
     //原 .book .page.grabbing
     .book .page.grab {
@@ -473,7 +527,7 @@ $fon14: 14px;
         transform: rotateY(-180deg);
     }
     .book .page.flipped:nth-child(odd):before {
-        // background: rgba(188, 104, 33, 0.2);
+        background: rgba(188, 104, 33, 0.2);
     }
     .book .page.flipped:nth-child(even) {
         pointer-events: all;
@@ -481,13 +535,13 @@ $fon14: 14px;
     }
     // 翻起頁角效果(右邊
     .book .page.flipped:nth-child(even):hover {
-        // transform: rotateY(15deg);
+        // transform: rotateY(10deg);
     }
     .book .page.flipped:nth-child(even):hover:before {
-        // background: rgba(188, 104, 33, 0.03);
+        background: rgba(188, 104, 33, 0.03);
     }
     .book .page.flipped:nth-child(even):before {
-        // background: rgba(188, 104, 33, 0);
+        background: rgba(188, 104, 33, 0);
     }
     *,
     * :before,
