--- a/CSS/F-Rented.css
+++ b/CSS/F-Rented.css
@@ -1,17 +1,21 @@
 @charset "UTF-8";
 .Rented {
   width: 100%;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  background-image: url("../img/場地租借/場地租借背景-01_工作區域 1.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .Rented .button-bar {
   height: calc(100vh - 30px);
   width: 20%;
-  background-color: #e9e1d3;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -19,7 +23,7 @@
 
 .Rented .button-bar .button-g {
   height: 50%;
-  width: 50%;
+  width: 100%;
   margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -48,6 +52,7 @@
 .Rented .button-bar .button-g .lease-box {
   height: 20%;
   width: 100%;
+  text-decoration: unset;
   font-size: 32px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -60,18 +65,155 @@
           justify-content: center;
 }
 
-.Rented .button-bar .button-g .lease-box .text-box {
+@media (max-width: 1280px) {
+  .Rented .button-bar .button-g .lease-box {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .Rented .button-bar .button-g .lease-box {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 768px) {
+  .Rented .button-bar .button-g .lease-box {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 320px) {
+  .Rented .button-bar .button-g .lease-box {
+    font-size: 18px;
+  }
+}
+
+@-webkit-keyframes stripe-slide {
+  0% {
+    background-position: 0% 0;
+  }
+  100% {
+    background-position: 100% 0;
+  }
+}
+
+@keyframes stripe-slide {
+  0% {
+    background-position: 0% 0;
+  }
+  100% {
+    background-position: 100% 0;
+  }
+}
+
+.Rented .button-bar .button-g .lease-box .btn {
+  overflow: visible;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  background: transparent;
+  font: inherit;
+  line-height: normal;
+  cursor: pointer;
+  -moz-user-select: text;
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 16px 10px 22px;
+  background-color: #efe5cb;
+  color: #595757;
+  border-radius: 6px;
+  margin-bottom: 16px;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.Rented .button-bar .button-g .lease-box .btn:-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+.Rented .button-bar .button-g .lease-box .btn--stripe {
+  overflow: hidden;
+  position: relative;
+}
+
+.Rented .button-bar .button-g .lease-box .btn--stripe:after {
+  content: "";
+  display: block;
+  height: 7px;
+  width: 100%;
+  background-image: repeating-linear-gradient(45deg, #c67b56, #c67b56 1px, transparent 2px, transparent 5px);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-top: 1px solid #c67b56;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-size: 7px 7px;
+}
+
+.Rented .button-bar .button-g .lease-box .btn--stripe:hover {
+  background-color: #d4a63f;
+  color: #fff;
+  border-color: #c67b56;
+}
+
+.Rented .button-bar .button-g .lease-box .btn--stripe:hover:after {
+  background-image: repeating-linear-gradient(45deg, #fff, #fff 1px, transparent 2px, transparent 5px);
+  border-top: 1px solid #c67b56;
+  -webkit-animation: stripe-slide 12s infinite linear forwards;
+          animation: stripe-slide 12s infinite linear forwards;
+}
+
+.Rented .button-bar .button-g .lease-box .btn--large {
+  width: 50%;
+}
+
+.Rented .button-bar .button-g .lease-box .btn--radius {
+  border-radius: 36px;
+}
+
+.Rented .button-bar .button-g .lease-box .modal-content {
+  width: 100%;
+  background-color: rgba(233, 225, 211, 0.9);
+}
+
+.Rented .button-bar .button-g .lease-box .modal-content .text-box {
   width: 80%;
-  line-height: 36px;
   font-size: 30px;
   text-align: start;
   margin: auto;
 }
 
+@media (max-width: 1280px) {
+  .Rented .button-bar .button-g .lease-box .modal-content .text-box {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .Rented .button-bar .button-g .lease-box .modal-content .text-box {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .Rented .button-bar .button-g .lease-box .modal-content .text-box {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 320px) {
+  .Rented .button-bar .button-g .lease-box .modal-content .text-box {
+    font-size: 16px;
+  }
+}
+
 .Rented .photo-R {
   height: calc(100vh - 30px);
   width: 80%;
-  background-color: #e9e1d3;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -83,7 +225,6 @@
 .Rented .photo-R .photo {
   height: 80%;
   width: 100%;
-  background-color: #8c28e9;
   /* ---輪播CSS--- */
 }
 
@@ -95,7 +236,6 @@
 .Rented .photo-R .photo .swiper-container .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #e9e1d3;
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
@@ -112,17 +252,65 @@
 .Rented .photo-R .photo .swiper-container .swiper-slide .rented-img {
   width: 80%;
   height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.Rented .photo-R .photo .swiper-container .swiper-slide .rented-img01 {
+  background-image: url("../img/場地租借/石鼓會議廳-2.jpg");
+}
+
+.Rented .photo-R .photo .swiper-container .swiper-slide .rented-img02 {
+  background-image: url("../img/場地租借/永不出軌宴會廳-1.jpg");
+}
+
+.Rented .photo-R .photo .swiper-container .swiper-slide .rented-img03 {
+  background-image: url("../img/場地租借/齒輪舞台-3.jpg");
+}
+
+.Rented .photo-R .photo .swiper-container .swiper-slide .rented-img04 {
+  background-image: url("../img/場地租借/水槽劇場-4.jpg");
 }
 
 .Rented .photo-R .photo .swiper-container .swiper-slide .text-center {
-  padding: 5px;
+  width: 300px;
+  height: 300px;
+  padding: 8px;
   background-color: rgba(177, 88, 33, 0.5);
   color: #f7f8f8;
   position: absolute;
   top: 50%;
   left: 50%;
+  font-size: 30px;
+  text-align: center;
+  line-height: 50px;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+@media (max-width: 768px) {
+  .Rented .photo-R .photo .swiper-container .swiper-slide .text-center {
+    width: 150px;
+    height: 150px;
+    font-size: 16px;
+    line-height: 25px;
+    padding: 0;
+  }
+}
+
+.Rented .photo-R .photo .swiper-container .swiper-slide .text-center .text-set {
+  width: 100%;
 }
 
 .Rented .photo-R .photo .swiper-container .swiper-pagination-bullet {
